2001-10-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Add 'exim' as another option for
	MAIL_TRANSFER_AGENT, and change BOUNCE_ENV_SENDER default if MTA
	is Exim.

	* MTA.py: Move the Postfix instance variables and methods up to
	the MTA superclass.  Subclasses automatically inherit this
	functionality.  The Qmail subclass then overrides all of it since
	it's unique.  Also, add an Exim subclass.

	(TMDA_VERSION): Begin 0.40 development.

2001-10-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (findmatch): Downcase each address for case-insensitive
	comparison with list.

2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (MESSAGE_FROM_STYLE): New variable that specifies
	how `From' headers should look on outgoing tagged messages.

	(KEYWORD_FILE): New variable pointing to the list file containing
	destinations that should receive keyword tagged messages.

2001-10-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_keyword_address): Lowercase keyword before
	creating the keyword address.  E-mail addresses are
	case-insensitive.
	
2001-10-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_keywordmac, make_keyword_cookie,
	make_keyword_address): New functions to return an HMAC, a cookie,
	and an e-mail address based on a 'keyword'.

2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.39 development.

2001-10-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* MTA.py (Postfix.deliver): Bugfix.  The exit code from
	LOCAL_DELIVERY_AGENT was not being propagated to the MTA.  
	(e.g, tmda-filter returns 0 if procmail returns 77.)  
	The fix is to do some more processing on the exitcode before
	passing it to sys.exit.  Patch contributed by Matt Armstrong.

2001-10-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
