@@ -298,6 +298,25 @@ if not vars().has_key('MESSAGE_FROM_STYLE'):
 if not vars().has_key('TIMEOUT'):
     TIMEOUT = "5d"
 
+# TIMEZONE
+# A string representing a valid timezone on your system.  e.g,
+#
+# TIMEZONE = "MST7MDT"
+# TIMEZONE = "Pacific/Auckland"
+#
+# This setting might be useful when you want dates represented (in
+# logfiles, mail headers, etc.) in a timezone other than the default
+# timezone of the machine running TMDA.
+# Default is the timezone of the local host.
+if not vars().has_key('TIMEZONE'):
+    TIMEZONE = None
+# The time module gets the timezone name when first imported, and it
+# can't be changed by later setting TZ in the environment.  Thus, we
+# must set TZ first, or else the time-zone as hour offset from UTC
+# will be incorrect.
+else:
+    os.environ['TZ'] = TIMEZONE
+
 # USERNAME
 # The left-hand side of your e-mail address (before `@').
 # Defaults to your UNIX username.
