@@ -1,3 +1,7 @@
+2001-11-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add TIMEZONE.
+
 2001-10-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda.spec: Raise version number to 0.40.
